add finalize project